// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/lib/tasks/install > .start > exits with error when installing on unsupported os > error when installing on unsupported os 1`] = `
"[31mError: The Cypress App could not be installed. Your machine does not meet the operating system requirements.[39m
[31m[39m
[31mhttps://on.cypress.io/app/get-started/install-cypress#System-requirements[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: win32-ia32[39m
"
`;

exports[`/lib/tasks/install > .start > is silent when log level is silent > silent install 1 1`] = `
"[STARTED] Task without title.
[SUCCESS] Task without title.
[STARTED] Task without title.
[SUCCESS] Task without title.
[STARTED] Task without title.
[SUCCESS] Task without title.
"
`;

exports[`/lib/tasks/install > .start > non-stable builds > logs a warning about installing a pre-release > pre-release warning 1`] = `
"[33m⚠ Warning: You are installing a pre-release build of Cypress.[39m
[33m[39m
[33mBugs may be present which do not exist in production builds.[39m
[33m[39m
[33mThis build was created from:[39m
[33m  * Commit SHA: 3b7f0b5c59def1e9b5f385bd585c9b2836706c29[39m
[33m  * Commit Branch: aBranchName[39m
[33m  * Commit Timestamp: 1996-11-27T00:00:00.000Z[39m

Installing Cypress [90m(version: https://cdn.cypress.io/beta/binary/0.0.0-development/darwin-x64/aBranchName-3b7f0b5c59def1e9b5f385bd585c9b2836706c29/cypress.zip)[39m

[STARTED] Task without title.
[TITLE] [34m [32mDownloaded Cypress[39m[34m[39m
[SUCCESS] [34m [32mDownloaded Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mUnzipped Cypress[39m[34m[39m
[SUCCESS] [34m [32mUnzipped Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m
[SUCCESS] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m

You can now open Cypress by running one of the following, depending on your package manager:

[36m- npx cypress open[39m
[36m- yarn cypress open[39m
[36m- pnpm cypress open[39m

[90mhttps://on.cypress.io/opening-the-app[39m

"
`;

exports[`/lib/tasks/install > .start > override version > as a global install > logs global warning and download > warning installing as global 1 1`] = `
"
Cypress [32mx.x.x[39m is installed in [36m/cache/Cypress/1.2.3[39m

Installing Cypress [90m(version: 1.2.3)[39m

[STARTED] Task without title.
[TITLE] [34m [32mDownloaded Cypress[39m[34m[39m
[SUCCESS] [34m [32mDownloaded Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mUnzipped Cypress[39m[34m[39m
[SUCCESS] [34m [32mUnzipped Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m
[SUCCESS] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m

[33m⚠ Warning: It looks like you've installed Cypress globally.[39m
[33m[39m
[33m  The recommended way to install Cypress is as a devDependency per project.[39m
[33m[39m
[33m  You should probably run these commands:[39m
[33m[39m
[33m  - [36mnpm uninstall -g cypress[39m[33m[39m
[33m  - [36mnpm install --save-dev cypress[39m[33m[39m
"
`;

exports[`/lib/tasks/install > .start > override version > failed write access to cache directory > logs error on failure > invalid cache directory 1 1`] = `
"[31mError: Cypress cannot write to the cache directory due to file permissions[39m
[31m[39m
[31mSee discussion and possible solutions at[39m
[31mhttps://github.com/cypress-io/cypress/issues/1281[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mFailed to access [36m/invalid/cache/dir[39m[31m:[39m
[31m[39m
[31mEACCES: permission denied, mkdir '/invalid'[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (Foo - OsVersion)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`/lib/tasks/install > .start > override version > warns when specifying cypress version in env > specify version in env vars 1 1`] = `
"[33m⚠ Warning: Forcing a binary version different than the default.[39m
[33m[39m
[33m  The CLI expected to install version: [32m1.2.3[39m[33m[39m
[33m[39m
[33m  Instead we will install version: [32m0.12.1[39m[33m[39m
[33m[39m
[33m  These versions may not work properly together.[39m

Installing Cypress [90m(version: 0.12.1)[39m

[STARTED] Task without title.
[TITLE] [34m [32mDownloaded Cypress[39m[34m[39m
[SUCCESS] [34m [32mDownloaded Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mUnzipped Cypress[39m[34m[39m
[SUCCESS] [34m [32mUnzipped Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m
[SUCCESS] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m

You can now open Cypress by running one of the following, depending on your package manager:

[36m- npx cypress open[39m
[36m- yarn cypress open[39m
[36m- pnpm cypress open[39m

[90mhttps://on.cypress.io/opening-the-app[39m

"
`;

exports[`/lib/tasks/install > .start > override version > when getting installed version does not match needed version > logs message and starts download > installed version does not match needed version 1 1`] = `
"
Cypress [32mx.x.x[39m is installed in [36m/cache/Cypress/1.2.3[39m

Installing Cypress [90m(version: 1.2.3)[39m

[STARTED] Task without title.
[TITLE] [34m [32mDownloaded Cypress[39m[34m[39m
[SUCCESS] [34m [32mDownloaded Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mUnzipped Cypress[39m[34m[39m
[SUCCESS] [34m [32mUnzipped Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m
[SUCCESS] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m

You can now open Cypress by running one of the following, depending on your package manager:

[36m- npx cypress open[39m
[36m- yarn cypress open[39m
[36m- pnpm cypress open[39m

[90mhttps://on.cypress.io/opening-the-app[39m

"
`;

exports[`/lib/tasks/install > .start > override version > when getting installed version fails > logs message and starts download > continues installing on failure 1 1`] = `
"Installing Cypress [90m(version: 1.2.3)[39m

[STARTED] Task without title.
[TITLE] [34m [32mDownloaded Cypress[39m[34m[39m
[SUCCESS] [34m [32mDownloaded Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mUnzipped Cypress[39m[34m[39m
[SUCCESS] [34m [32mUnzipped Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m
[SUCCESS] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m

You can now open Cypress by running one of the following, depending on your package manager:

[36m- npx cypress open[39m
[36m- yarn cypress open[39m
[36m- pnpm cypress open[39m

[90mhttps://on.cypress.io/opening-the-app[39m

"
`;

exports[`/lib/tasks/install > .start > override version > when running in CI > uses verbose renderer > installing in ci 1 1`] = `
"
Cypress [32mx.x.x[39m is installed in [36m/cache/Cypress/1.2.3[39m

Installing Cypress [90m(version: 1.2.3)[39m

[STARTED] Task without title.
[SUCCESS] Task without title.
[STARTED] Task without title.
[SUCCESS] Task without title.
[STARTED] Task without title.
[SUCCESS] Task without title.

You can now open Cypress by running one of the following, depending on your package manager:

[36m- npx cypress open[39m
[36m- yarn cypress open[39m
[36m- pnpm cypress open[39m

[90mhttps://on.cypress.io/opening-the-app[39m

"
`;

exports[`/lib/tasks/install > .start > override version > when there is no install version > logs message and starts download > installs without existing installation 1 1`] = `
"Installing Cypress [90m(version: 1.2.3)[39m

[STARTED] Task without title.
[TITLE] [34m [32mDownloaded Cypress[39m[34m[39m
[SUCCESS] [34m [32mDownloaded Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mUnzipped Cypress[39m[34m[39m
[SUCCESS] [34m [32mUnzipped Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m
[SUCCESS] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m

You can now open Cypress by running one of the following, depending on your package manager:

[36m- npx cypress open[39m
[36m- yarn cypress open[39m
[36m- pnpm cypress open[39m

[90mhttps://on.cypress.io/opening-the-app[39m

"
`;

exports[`/lib/tasks/install > .start > override version > when version is already installed > logs 'skipping install' when explicit cypress install > version already installed - cypress install 1 1`] = `
"
Cypress [32m1.2.3[39m is installed in [36m/cache/Cypress/1.2.3[39m

Skipping installation:

  Pass the [33m--force[39m option if you'd like to reinstall anyway.
"
`;

exports[`/lib/tasks/install > .start > override version > when version is already installed > logs when already installed when run from postInstall > version already installed - postInstall 1 1`] = `
"
Cypress [32m1.2.3[39m is installed in [36m/cache/Cypress/1.2.3[39m

"
`;

exports[`/lib/tasks/install > .start > override version > with force: true > logs message and starts download > forcing true always installs 1 1`] = `
"
Cypress [32m1.2.3[39m is installed in [36m/cache/Cypress/1.2.3[39m

Installing Cypress [90m(version: 1.2.3)[39m

[STARTED] Task without title.
[TITLE] [34m [32mDownloaded Cypress[39m[34m[39m
[SUCCESS] [34m [32mDownloaded Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mUnzipped Cypress[39m[34m[39m
[SUCCESS] [34m [32mUnzipped Cypress[39m[34m[39m
[STARTED] Task without title.
[TITLE] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m
[SUCCESS] [34m [32mFinished Installation[39m[34m [90m/cache/Cypress/1.2.3[39m[34m[39m

You can now open Cypress by running one of the following, depending on your package manager:

[36m- npx cypress open[39m
[36m- yarn cypress open[39m
[36m- pnpm cypress open[39m

[90mhttps://on.cypress.io/opening-the-app[39m

"
`;

exports[`/lib/tasks/install > .start > skips install > when environment variable is set > skip installation 1 1`] = `
"[33mNote:[39m Skipping binary installation: Environment variable CYPRESS_INSTALL_BINARY = 0.

"
`;
